@@ -1,3 +1,8 @@
+2004-05-02  Richard Hult  <richard@imendio.com>
+
+	* drw-monitor.c Raise the threshold for detecting activity, makes
+	totem not trigger typing breaks. Fixes bug #121876.
+
 2004-04-15  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.1
